<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/helpIv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/back_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="70dp"
        android:orientation="vertical">

        <TextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_login" />

        <EditText
            android:id="@+id/loginEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" />

        <TextView
            android:id="@+id/loginErrorTv"
            style="@style/DescribeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/passwordErrorTv"
            style="@style/DescribeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password" />

        <EditText
            android:id="@+id/repeatPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:singleLine="true" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/next" />

    </LinearLayout>


</FrameLayout>